==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.19.1]]
==== 1.19.1 - YYYY/MM/DD

[float]
===== Breaking changes
* The following public API types were `public` so far and became package-private: `NoopScope`, `ScopeImpl` and `AbstractSpanImpl`.
  If your code is using them, you will need to change that when upgrading to this version.
  Related PR: {pull}1532[#1532]

[float]
===== Features

[float]
===== Bug fixes
* Fix small memory allocation regression introduced with tracestate header {pull}1508[#1508]
* Fix `NullPointerException` from `WeakConcurrentMap.put` through the Elasticsearch client instrumentation - {pull}1531[#1531]
* Sending `transaction_id` and `parent_id` only for events that contain a valid `trace_id` as well - {pull}1537[#1537]
* Fix `ClassNotFoundError` with old versions of Spring resttemplate {pull}1524[#1524]
* Fix Micrometer-driven metrics validation errors by the APM Server when sending with illegal values - {pull}1559[#1559]
* Serialize all stack trace frames when setting `stack_trace_limit=-1` instead of none - {pull}1571[#1571]

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1405[#1405] {pull}1394[#1394]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.19.0]]
==== 1.19.0 - 2020/11/10

[float]
===== Features
* The agent version now includes a git hash if it's a snapshot version.
  This makes it easier to differ distinct snapshot builds of the same version.
  Example: `1.18.1-SNAPSHOT.4655910`
* Add support for sampling weight with propagation in `tracestate` W3C header {pull}1384[#1384]
* Adding two more valid options to the `log_level` config: `WARNING` (equivalent to `WARN`) and `CRITICAL`
  (will be treated as `ERROR`) - {pull}1431[1431]
* Add the ability to disable Servlet-related spans for `INCLUDE`, `FORWARD` and `ERROR` dispatches (without affecting